force-app/main/default/objects/ConversationTKEinsteinConfig__c/ConversationTKEinsteinConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Conversation Toolkit Einstein Intent</label>
</CustomObject>