force-app/main/default/objects/ConversationTKEinsteinConfig__c/fields/Intent_Model_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Intent_Model_Id_2__c</fullName>
    <inlineHelpText>The model ID of the second intent model</inlineHelpText>
    <label>Intent Model Id 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>