force-app/main/default/objects/ConversationTKEinsteinConfig__c/fields/Intent_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Intent_Model_Id__c</fullName>
    <inlineHelpText>Model ID of the first intent model</inlineHelpText>
    <label>Intent Model Id 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>