force-app/main/default/objects/ConversationTKEinsteinConfig__c/fields/Sentiment_Model_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Model_ID_1__c</fullName>
    <inlineHelpText>The ID of the first Sentiment model</inlineHelpText>
    <label>Sentiment Model ID 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>