force-app/main/default/objects/ConversationTKEinsteinConfig__c/fields/Sentiment_Model_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Model_ID_2__c</fullName>
    <inlineHelpText>The model ID of the second sentiment model</inlineHelpText>
    <label>Sentiment Model ID 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>